--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,9 @@ version: 1.0.0
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  supabase: ^0.0.4
+  hive: ^2.0.4
 
 dev_dependencies:
   pedantic: ^1.10.0
