--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ build/
 # Omit committing pubspec.lock for library packages; see
 # https://dart.dev/guides/libraries/private-files#pubspeclock.
 pubspec.lock
+
+example/credentials.dart
+supabase_authentication.hive
+supabase_authentication.lock
