--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   supabase: ^0.0.4
   hive: ^2.0.4
   intl: ^0.17.0
+  stack_trace: ^1.10.0
 
 dev_dependencies:
   pedantic: ^1.10.0
