--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: supabase_addons
 description: A starting point for Dart libraries or applications.
-version: 0.0.1
-# homepage: https://www.example.com
+version: 0.0.1+1
+repository: https://github.com/bdlukaa/supabase_addons
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  supabase: ^0.0.4
+  supabase: ^0.0.5
   hive: ^2.0.4
   intl: ^0.17.0
   stack_trace: ^1.10.0
