--- a/visualizer/pubspec.yaml
+++ b/visualizer/pubspec.yaml
@@ -12,7 +12,11 @@ dependencies:
   flutter:
     sdk: flutter
   supabase: ^0.0.6
-  flutter_svg:
+  shimmer: ^2.0.0
+  fl_chart: ^0.36.3
+  country_provider: ^1.0.2
+  flag: ^5.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
