--- a/visualizer/web/manifest.json
+++ b/visualizer/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "visualizer",
-    "short_name": "visualizer",
+    "name": "Visualizer",
+    "short_name": "Visualizer",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#3ecf8e",
+    "theme_color": "#3ecf8e",
+    "description": "Flutter developers analize their apps performance with Supabase.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
