--- a/supabase_addons_flutter/pubspec.yaml
+++ b/supabase_addons_flutter/pubspec.yaml
@@ -1,7 +1,8 @@
 name: supabase_addons_flutter
-description: Supabase Addons in Fluter
+description: Supabase Addons in Fluter. Helps you build Flutter apps with Supabase
 version: 0.0.1
-homepage:
+homepage: https://github.com/bdlukaa/supabase_addons/tree/master/supabase_addons_flutter
+repository: https://github.com/bdlukaa/supabase_addons/
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -11,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   supabase: ^0.0.7
-  supabase_addons: ^0.0.3
+  supabase_addons: ^0.0.4
   path_provider: ^2.0.2
   package_info_plus: ^1.0.4
 
